Fixed the layering problem with the blitcore mobile diagram always overlapping the blitcore heading and button in all browsers except chrome. Now works on all browsers with custom css and not just tailwind

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -190,3 +190,13 @@ $aos-distance: 10px;
     }
 }
 
+.blitDiag 
+{
+    z-index: -1;
+}
+
+
+.heroContent 
+{
+    z-index: 3;
+}
